# lms

./: Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 08831564fcf1_replace_test_choices_dict_with_list.py  0f92cd640d00_add_user_model.py  170e478f46c7_replace_test_question_name_with_number.py  1f65cf1a1538_add_course_model.py  4162245472ba_add_lessom_model.py  45a011eb0e1e_add_review_model.py  814398e22e03_merge_conflicting_heads.py  a079f25e1f58_merge_conflicting_heads.py  ab4b851696c2_update_user_course_model.py  abe1ea162bfd_add_review_model.py  b60c8cd5995a_update_test_questions.py  c014f0b1de40_add_user_course_model.py  cb5ce4f1f77c_rename_course_table.py  d0b4342b354e_fix_reviews_user_id_course_id_to_uuid.py  d5a7411748f0_replace_with_a_new_syntax.py  eb518cf31643_add_test_questions.py
reports/: alekseev.md  kubataev.md  naschekina.md  volkova.md  vorobyov.md
src/: database.py  main.py  redis_client.py
src/configs/: app.py
src/models/: __init__.py  base.py  course.py  lesson.py  review.py  test_question.py  user.py  user_course.py
src/repositories/: auth.py  course.py  lesson.py  review.py  test_question.py  user.py  user_course.py
src/schemas/: auth_schema.py  course_schema.py  lesson_schema.py  review_schema.py  test_question_schema.py  user_course_schema.py  user_schema.py
tests/: conftest.py  test_admin.py  test_auth.py  test_course.py  test_lessons.py  test_reviews.py  test_test_question.py  test_user_courses.py
(+14 files in other folders)
