[project]
name = "lms"
version = "0.1.0"
description = "Learning Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "dynaconf>=3.2.12",
    "fastapi[standard]>=0.121.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.5",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "dynaconf"
ignore_missing_imports = true
