[project]
name = "lms"
version = "0.1.0"
description = "Learning Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "dynaconf>=3.2.12",
    "fastapi[standard]>=0.121.2",
    "passlib>=1.7.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.5",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "dynaconf"
ignore_missing_imports = true
